src/dispatch/snapshots/dispatch_tui__dispatch__prompts_snapshots__snapshot_dispatch_prompt_dependabot.snap
---
source: src/dispatch/prompts_snapshots.rs
expression: prompt
---
Your task is:
Task:
  ID: 42
  Title: Bump serde from 1.0.195 to 1.0.197
  Description: https://github.com/example/repo/pull/42

This is a Dependabot PR review, not a code-edit task: do not edit files or write a plan — the task is auto-cleaned when the PR merges (or the user takes over).

Bump: patch — serde 1.0.195 → 1.0.197
PR: https://github.com/example/repo/pull/42
   Pass this URL to every `gh` command below — it identifies the repo too, so none of them need `--repo`.

1. Verify the PR touches only dependency files (gh pr view <PR> --json files, gh pr diff <PR>). Approve only a PR that changes just dependency manifests, lockfiles and pinned GitHub Action versions in workflow files; anything else, such as build scripts or source, goes to ASK THE USER.
   - Do not re-check the PR author. The feed that created this task lists PRs by bot author, so a task only exists for a PR that already passed that filter; re-deriving it costs a call and can only ever agree.
2. Check CI: gh pr checks <PR>. Passing checks continue to step 3; pending checks go to ASK THE USER, asking whether to wait; failing checks go to ASK THE USER with the failure summary.
3. This is a patch bump. Nothing further to check — go to AUTO-APPROVE + MERGE.

AUTO-APPROVE + MERGE:
   - First check Kognic's GitHub App verdict: gh pr view <PR> --json reviews,comments. The app is `kognic-github-app`. It is safe only if the app's latest review is APPROVED (a new push dismisses its earlier review). If that review is dismissed, absent or anything else, go to ASK THE USER and quote the reason from the app's latest comment, or say the app has given no verdict.
   - gh pr review <PR> --approve, with a body saying what you actually checked.
   - gh pr merge <PR> --squash --auto
   - Note: --auto requires the repo to have branch protection with required checks; without it, the PR merges immediately.
   - Done. Nothing further is needed: the task is auto-cleaned on merge.

ASK THE USER:
   - Write one direct question that says why you did not approve, with whatever the human needs to decide: the Bump line above, and the CI or changelog findings where they matter. If Kognic's GitHub App `kognic-github-app` blocked the merge, name its verdict.
   - Call update_task(task_id=42, sub_status="needs_input") to flag the task on the kanban board.
   - Stop and wait for the user's reply; the task stays open for them.

Knowledge base: the `/learnings` skill manages it — check it when something is unclear, and record what you find.
