src/dispatch/snapshots/dispatch_tui__dispatch__prompts_snapshots__snapshot_dispatch_prompt_no_plan.snap
---
source: src/dispatch/prompts_snapshots.rs
expression: prompt
---
Your task is:
Task:
  ID: 42
  Title: Fix the authentication bug
  Description: Users cannot log in after the password hash migration

Design the solution spec-first: elicit the intended behaviour with `allium:elicit`, capture it in docs/specs/ with `allium:tend`, generate tests with `allium:propagate` and confirm they fail before you write any code, implement the minimum that makes them pass, then check spec and code agree with `allium:weed`.

Writing a plan to docs/plans/ and attaching it with update_task is your judgement call, not a requirement — do it only if the implementation is big enough that its steps are worth recording.

The spec is not the end of the task — implement it in this same session (or, for an epic-decomposition task, create work packages for its subtasks instead) and verify your work before wrapping up.

Knowledge base: the `/learnings` skill manages it — check it when something is unclear, and record what you find.

When your work is done — finishing implementation, or (for an epic-decomposition task) creating work packages for its subtasks — use the /wrap-up skill to commit any remaining changes and finalise the task.
