src/dispatch/snapshots/dispatch_tui__dispatch__prompts_snapshots__snapshot_dispatch_prompt_pr_review.snap
---
source: src/dispatch/prompts_snapshots.rs
expression: prompt
---
Your task is:
Task:
  ID: 42
  Title: Review PR: Add new login flow
  Description: https://github.com/example/repo/pull/99

This is a PR review task, not a code-edit task: do not write a plan or change code — you are here to review the PR.

1. Find the PR number or URL in the task description.
2. Run `/code-review` on that PR.

Present your findings and wait for the user's instructions.

Knowledge base: the `/learnings` skill manages it — check it when something is unclear, and record what you find.
