src/dispatch/snapshots/dispatch_tui__dispatch__prompts_snapshots__snapshot_dispatch_prompt_with_epic.snap
---
source: src/dispatch/prompts_snapshots.rs
expression: prompt
---
Your task is:
Task:
  ID: 42
  Title: Fix the authentication bug
  Description: Users cannot log in after the password hash migration
  EpicId: 7

This task is part of epic #7: Auth overhaul
Sibling agents run as sessions named task-<id>, matching that task's own id. Find one with ListAgents and message it with SendMessage.

Design the solution spec-first, in this order:

1. Interview the user with the `allium:elicit` skill until the intended behaviour is unambiguous.
2. Capture what you agreed in the relevant `docs/specs/*.allium` file, via `allium:tend`.
3. Generate tests from the spec with `allium:propagate` and confirm they fail before you write any code.
4. Implement the minimum code that makes them pass.
5. Confirm spec and code agree with `allium:weed`.

Two things are your judgement call, not requirements: write a plan to docs/plans/ and attach it with update_task only if the implementation is big enough that its steps are worth recording; and for a large or stubborn convergence, hand steps 3-5 to the `/allium-loop` skill instead of running them inline.

The spec is not the end of the task — implement it in this same session (or, for an epic-decomposition task, create work packages for its subtasks instead) and verify your work before wrapping up.

Knowledge base: the `/learnings` skill manages it — check it when something is unclear, and record what you find.

When your work is done — finishing implementation, or (for an epic-decomposition task) creating work packages for its subtasks — use the /wrap-up skill to commit any remaining changes and finalise the task.
