src/dispatch/snapshots/dispatch_tui__dispatch__prompts_snapshots__snapshot_dispatch_prompt_with_verify.snap
---
source: src/dispatch/prompts_snapshots.rs
expression: prompt
---
Your task is:
Task:
  ID: 42
  Title: Fix the authentication bug
  Description: Users cannot log in after the password hash migration


## Verification

Before declaring work complete, run this in your worktree and confirm it passes:

````
cargo test
````

If it fails, fix the underlying issue rather than skipping it.
Use /brainstorming to design the solution if the task description is vague or underspecified. Otherwise write an implementation plan directly, save it to docs/plans/ and call update_task to attach it.

Always use TDD: express intended behaviour as tests first, then implement the minimum code to make them pass.

The Allium specs in `docs/specs/` are the source of truth for domain logic. Consult them before changing core behaviour. If your implementation changes domain behaviour, update the spec using the `allium:tend` skill and verify alignment with `allium:weed`.

The dispatch MCP tools are available — use them to query and update this task (get_task, update_task).

Knowledge base: when anything is unclear, call `query_learnings` to check the knowledge base before guessing or asking. When you act on a surfaced learning, call `rate_learning` (`helped` or `wrong`); use `/learnings` to record useful findings.

When your work is done — attaching a plan, creating work packages, or finishing implementation — use the /wrap-up skill to commit any remaining changes and finalise the task.
