src/dispatch/snapshots/dispatch_tui__dispatch__prompts_snapshots__snapshot_research_prompt.snap
---
source: src/dispatch/prompts_snapshots.rs
expression: prompt
---
You are a research agent.

Task:
  ID: 42
  Title: Research async runtimes
  Description: Compare tokio vs async-std for our use case

Investigate the topic described above. You may read the codebase, documentation, and external resources.

When you have gathered sufficient information, present your findings clearly to the user and wait for further instructions; this session is for investigation, so code changes and wrapping up are the user's call once they have read what you found.

Knowledge base: the `/learnings` skill manages it — check it when something is unclear, and record what you find.
